Updated Models, Added Generic Services

--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/Warehouse.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/Warehouse.razor
@@ -20,7 +20,7 @@
 		</HeaderTemplate>
 		<ChildContent>
 			<RadzenDataList AllowVirtualization=false Style="width: 100%;" WrapItems="false" AllowPaging="true"
-							TItem="WarehouseViewModel.Warehouse" PageSize="5" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true">
+							TItem="WarehouseViewModel" PageSize="5" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true">
 				<Template Context="data">
 
 				</Template>
