[BlazorServer](fix) Styling Fix and View Model Fixes

--- a/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
@@ -17,7 +17,10 @@
 					<label class="fw-bold text-capitalize">Password</label>
 					<input class="input" type="password" placeholder="Password" />
 				</div>
-				<button Style="margin-top: 0.5rem; width: 100%; background-color: #4388FB; padding: 0.65rem 0rem 0.65rem 0rem; text-transform:capitalize; font-weight: 700; border-radius: var(--rz-border-radius-3)">
+				@* <button Style="margin-top: 0.5rem; width: 100%; background-color: #4388FB; padding: 0.65rem 0rem 0.65rem 0rem; text-transform:capitalize; font-weight: 700; border-radius: var(--rz-border-radius-3)">
+					Login
+				</button> *@
+				<button Style="border: none;margin-top: 0.5rem; width: 100%; background-color: #4388FB; padding: 0.65rem 0rem 0.65rem 0rem; text-transform:capitalize; font-weight: 700; border-radius: var(--rz-border-radius-3)" class="btn btn-primary">
 					Login
 				</button>
 			</RadzenStack>
