[BlazorServer](update) User Management Creation of Users

--- a/LAKAPSAGAP.BlazorServer/Pages/UserManagement/UsersCreate.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/UserManagement/UsersCreate.razor
@@ -95,6 +95,12 @@
 	[Parameter]
 	public DialogService dialogService { get; set; } = default!;
 
+	[Parameter]
+	public RadzenDataGrid<UserInfo> datagrid { get; set; } = default!;
+
+	[Parameter]
+	public List<UserInfo> datalist { get; set; } = new();
+
 	private void HandleFileSelected(InputFileChangeEventArgs e)
 	{
 		model.fileList = e.GetMultipleFiles().ToList();
