--- a/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
@@ -17,29 +17,29 @@
         </div>
     </div>
 
-    <RadzenDataGrid AllowFiltering="true" AllowColumnResize="false" AllowAlternatingRows="false" FilterMode="FilterMode.Simple"
+    <RadzenDataGrid @ref="UsersDG" AllowFiltering="true" AllowColumnResize="false" AllowAlternatingRows="false" FilterMode="FilterMode.Simple"
                     AllowSorting="true" PageSize="5" AllowPaging="false" PagerHorizontalAlign="HorizontalAlign.Left"
-                    ShowPagingSummary="true" Data=@_userInfoList TItem="UserInfoViewModel" LogicalFilterOperator="LogicalFilterOperator.Or"
+                    ShowPagingSummary="true" Data=@_userInfoList TItem="UserInfo" LogicalFilterOperator="LogicalFilterOperator.Or"
                     Style="border-radius: var(--rz-border-radius-3);">
         <EmptyTemplate>
             <p style="color: lightgrey; font-size: 24px; text-align: center; margin: 2rem;">No records to display.</p>
         </EmptyTemplate>
         <Columns>
-            <RadzenDataGridColumn TItem="UserInfoViewModel" Property="Id" Title="Id" Width="80px" />
-            <RadzenDataGridColumn TItem="UserInfoViewModel" Title="Full Name" Width="250px">
+            <RadzenDataGridColumn TItem="UserInfo" Property="Id" Title="Id" Width="80px" />
+            <RadzenDataGridColumn TItem="UserInfo" Property="Role" Title="Role" Width="150px">
+                <Template Context="data">
+                    @(string.Join(" ", data.Role.Name.ToLower().Split('_').Select(word => char.ToUpper(word[0]) + word.Substring(1))))
+                </Template>
+            </RadzenDataGridColumn>
+            <RadzenDataGridColumn TItem="UserInfo" Title="Full Name" Width="250px">
                 <Template Context="data">
                     @($"{data.FirstName} {data.MiddleName} {data.LastName}")
                 </Template>
             </RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="UserInfoViewModel" Title="Organization" Width="250px">
-                <Template Context="data">
-                    @($"{data.Barangay} {data.UserRole}")
-                </Template>
-            </RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="UserInfoViewModel" Property="Email" Title="Email" Width="160px" />
-            <RadzenDataGridColumn TItem="UserInfoViewModel" Property="Phone" Title="Phone Number" Width="150px" />
-            <RadzenDataGridColumn TItem="UserInfoViewModel" Property="UserRole" Title="Designation" Width="150px" />
-            <RadzenDataGridColumn TItem="UserInfoViewModel" Title="Actions" Width="80px">
+            <RadzenDataGridColumn TItem="UserInfo" Property="Barangay" Title="Barangay" Width="250px" />
+            <RadzenDataGridColumn TItem="UserInfo" Property="Email" Title="Email" Width="160px" />
+            <RadzenDataGridColumn TItem="UserInfo" Property="Phone" Title="Phone Number" Width="150px" />
+            <RadzenDataGridColumn TItem="UserInfo" Title="Actions" Width="80px">
                 <Template Context="data">
                     <RadzenButton Style="border-radius: var(--rz-border-radius-3);"
                                   Icon="add" Shade="Shade.Light" ButtonStyle="ButtonStyle.Primary"/>
@@ -57,25 +57,28 @@
 
     [Inject] DialogService _dialogService { get; set; }
     [Inject] IUserRepository _userRepo { get; set; }
+
     [CascadingParameter]
     private HttpContext HttpContext { get; set; }
+
+    public RadzenDataGrid<UserInfo> UsersDG;
 
     private List<BreadcrumbViewModel> Breadcrumbs = new()
     {
         new BreadcrumbViewModel { Path = "/Users", Text = "User Management" },
     };
 
-    private List<UserInfoViewModel> _userInfoList = new();
+    private List<UserInfo> _userInfoList = new();
 
     protected override async Task OnInitializedAsync()
     {
         // var user = HttpContext.User.FindFirst(ClaimTypes.NameIdentifier);
-        // _userInfoList = _userRepo.
+        _userInfoList = await _userRepo.GetUsers();
     }
 
     async Task ShowUsersCreateDialog()
     {
-        var result = await _dialogService.OpenAsync("Add User", ds => @<UsersCreate dialogService="ds" />,
+        var result = await _dialogService.OpenAsync("Add User", ds => @<UsersCreate dialogService="ds" datagrid="UsersDG" datalist="_userInfoList" />,
             new DialogOptions()
             {
                 CssClass = "rz-w-fit-content",
