--- a/LAKAPSAGAP.BlazorServer/Pages/TestCreateAccount.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/TestCreateAccount.razor
@@ -1,7 +1,7 @@
 ﻿@page "/testregister"
 
 
-<EditForm Model="@createAccountViewModel" OnValidSubmit="HandleCreate">
+@* <EditForm Model="@createAccountViewModel" OnValidSubmit="HandleCreate">
     <DataAnnotationsValidator />
     <ValidationSummary />
 
@@ -73,5 +73,5 @@
 
     <button type="submit">Register</button>
 </EditForm>
-
+ *@
 
