--- a/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
@@ -18,7 +18,7 @@
     </div>
 
     <RadzenDataGrid @ref="UsersDG" AllowFiltering="true" AllowColumnResize="false" AllowAlternatingRows="false" FilterMode="FilterMode.Simple"
-                    AllowSorting="true" PageSize="5" AllowPaging="false" PagerHorizontalAlign="HorizontalAlign.Left"
+                    AllowSorting="true" PageSize="5" AllowPaging="true" PagerHorizontalAlign="HorizontalAlign.Left"
                     ShowPagingSummary="true" Data=@_userInfoList TItem="UserInfo" LogicalFilterOperator="LogicalFilterOperator.Or"
                     Style="border-radius: var(--rz-border-radius-3);">
         <EmptyTemplate>
